--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -40,13 +40,12 @@ clear: both
 /* 下面是自己写的样式 */
 
   /* 清除浏览器默认样式 宽高设置为100% */
-html, body {
+*{
     margin: 0;
     padding: 0;
-    height: 100%;
 }
 
-#app {
+html, body, #app {
     height: 100%;
 }
 
@@ -60,13 +59,17 @@ html, body {
 
 .el-aside .menu-top-text {
     padding-right: 20px;
+    padding-bottom: 20px;
 }
-
-.el-aside p {
+.el-aside .menu-top-text h2 {
+    margin: 25px 0;
+}
+.el-aside .menu-top-text p {
+    margin-bottom: 10px;
     font-size: 12px;
 }
 
-.el-aside p a {
+.el-aside .menu-top-text p a {
     color: #fff;
     text-decoration: none;
 }
@@ -80,7 +83,7 @@ html, body {
 .el-submenu {
     background-color: transparent;
     color: #fff;
-    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .el-submenu .el-submenu__title {
@@ -106,6 +109,12 @@ html, body {
     line-height: 33px;
     height: 33px;
 }
+
+.el-menu-item-group .el-menu-item a {
+    color: #fff;
+    text-decoration: none;
+}
+
 .el-menu-item-group .el-menu-item.is-active {
     background-color:transparent;
     color: greenyellow;
@@ -118,10 +127,8 @@ html, body {
 
 .el-header {
     text-align: left;
-    padding: 20px;
-    /* line-height: 60px; */
-    height: 100px!important;
-    /* margin-bottom: 30px; */
+    padding: 40px 20px 20px;
+    height: 120px!important;
 }
 
 .el-header h2 {
